HPCC4J-669 Documentation changes for the hpcc4j and spark-hpcc projects
Signed-off-by: Michael Gardner <michael.gardner@lexisnexisrisk.com>

--- a/spark-hpcc/pom.xml
+++ b/spark-hpcc/pom.xml
@@ -15,6 +15,8 @@
   <properties>
     <javadoc.excludePackageNames>net.razorvine.*:org.apache.*:org.hpccsystems.commons.*:org.hpccsystems.generated.*:org.hpccsystems.dfs.*:org.hpccsystems.ws.*:org.hpccsystems.ws.client.antlr.*</javadoc.excludePackageNames>
     <spark.runtime.version>2.4.6</spark.runtime.version>
+    <scala.binary.version>2.11</scala.binary.version>
+    <scala.version>2.11</scala.version>
  </properties>
 
 
