--- a/.github/workflows/publish-snapshots-on-merge.yml
+++ b/.github/workflows/publish-snapshots-on-merge.yml
@@ -23,7 +23,7 @@ jobs:
           server-password: MAVEN_PASSWORD
       - name: Publish package
         if: contains(github.ref_name, '-release') == false
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode -DskipITs deploy
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USER_NAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_PASS }}
