Fixed dependency issue with antlr

--- a/wsclient/pom.xml
+++ b/wsclient/pom.xml
@@ -99,6 +99,16 @@
       <artifactId>commons-hpcc</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4</artifactId>
+      <version>${antlr.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.antlr</groupId>
+      <artifactId>antlr4-runtime</artifactId>
+      <version>${antlr.version}</version>
+    </dependency>
   </dependencies>
 
  <profiles>
