--- a/spark-hpcc/pom.xml
+++ b/spark-hpcc/pom.xml
@@ -94,6 +94,16 @@
       <type>test-jar</type>
       <scope>test</scope>
       <version>${project.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.antlr</groupId>
+          <artifactId>antlr4-runtime</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.antlr</groupId>
+          <artifactId>antlr4</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.hpccsystems</groupId>
