HPCC4J-699 Spark-HPCC test suite needs to generate FailedTests file
- Added TestResultNotifier to Spark-HPCC project
- Updated workflows to check for Spark failedTests.csv

Signed-off-by: James McMullan James.McMullan@lexisnexis.com

--- a/.github/workflows/baremetal-regression-suite.yml
+++ b/.github/workflows/baremetal-regression-suite.yml
@@ -195,7 +195,7 @@ jobs:
 
         hadErrors = False
 
-        failedTestPaths = ["./wsclient/FailedTests.csv", "./dfsclient/FailedTests.csv"]
+        failedTestPaths = ["./wsclient/FailedTests.csv", "./dfsclient/FailedTests.csv", "./spark-hpcc/FailedTests.csv"]
         for file_path in failedTestPaths:
           if os.path.exists(file_path):
             with open(file_path, 'r') as file:
