--- a/spark-hpcc/pom.xml
+++ b/spark-hpcc/pom.xml
@@ -139,6 +139,12 @@
           <excludes>
             <exclude>*IntegrationTest.java</exclude>
           </excludes>
+            <properties>
+              <property>
+                <name>listener</name>
+                <value>org.hpccsystems.ws.client.TestResultNotifier</value>
+              </property>
+            </properties>
         </configuration>
       </plugin>
       <plugin>
