--- a/.github/workflows/publish-release-on-merge.yml
+++ b/.github/workflows/publish-release-on-merge.yml
@@ -13,16 +13,16 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-          gpg-private-key: ${{ secrets.SIGNING_SECRET }}
+          gpg-private-key: ${{ secrets.CENTRAL_SIGNING_SECRET }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: Publish package
-        run: mvn -Pjenkins-release -Dgpg.passphrase=${{ secrets.SIGN_MODULES_PASSPHRASE }} -DstagingProgressTimeoutMinutes=20 -DskipITs clean deploy -e
+        run: mvn -Pjenkins-release -Dgpg.passphrase=${{ secrets.CENTRAL_SIGN_MODULES_PASSPHRASE }} -DstagingProgressTimeoutMinutes=20 -DskipITs clean deploy -e
         env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USER_NAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_PASS }}
+          MAVEN_USERNAME: ${{ secrets.CENTRAL_USER_NAME }}
+          MAVEN_PASSWORD: ${{ secrets.CENTRAL_PASS }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.SIGN_MODULES_PASSPHRASE }}
   publish-jfrog-artifactory:
     runs-on: ubuntu-latest
@@ -36,10 +36,10 @@ jobs:
           server-id: 'jfrog'
           server-username: JFROG_USER
           server-password: JFROG_TOKEN
-          gpg-private-key: ${{ secrets.SIGNING_SECRET }}
+          gpg-private-key: ${{ secrets.CENTRAL_SIGNING_SECRET }}
           gpg-passphrase: JFROG_GPG_PASSPHRASE
       - name: Publish package
-        run: mvn -Pjfrog-artifactory -Dgpg.passphrase=${{ secrets.SIGN_MODULES_PASSPHRASE }} -DstagingProgressTimeoutMinutes=20 -DskipITs clean deploy -e
+        run: mvn -Pjfrog-artifactory -Dgpg.passphrase=${{ secrets.CENTRAL_SIGN_MODULES_PASSPHRASE }} -DstagingProgressTimeoutMinutes=20 -DskipITs clean deploy -e
         env:
           JFROG_USER: ${{ secrets.JFROG_USER }}
           JFROG_TOKEN: ${{ secrets.JFROG_TOKEN }}
