HPCC4J-708 Update wsclient with ESP 12.x interfaces
- Updates all services to match HPCC 9.12.x
- Updates all services to match HPCC 9.12.x
- Updates pom to match filespray wsdl naming
- Updates vscode launch to include several individual service updaters

Signed-off-by: Rodrigo Pastrana <rodrigo.pastrana@lexisnexisrisk.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,6 +65,16 @@
             "args": ["-b", "candidate-9.0.x", "-s", "wsworkunits"]
         },
         {
+            "name": "Generate 9.12.x wsworkunits",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/wsclient/utils/wsInterfaceUpdater.py",
+            "console": "integratedTerminal",
+            "justMyCode": true, 
+            "cwd": "${workspaceFolder}",
+            "args": ["-b", "candidate-9.12.x", "-s", "wsworkunits"]
+        },
+        {
             "name": "Generate 9.0.x filespray",
             "type": "python",
             "request": "launch",
