--- a/spark-hpcc/pom.xml
+++ b/spark-hpcc/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.hpccsystems</groupId>
     <artifactId>hpcc4j</artifactId>
-    <version>9.12.6-3-SNAPSHOT</version>
+    <version>9.12.6-1</version>
   </parent>
 
   <properties>
