--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -179,7 +179,7 @@ jobs:
 
             def get_merge_base(head, target):
                 result = subprocess.run(
-                    ["git", "merge-base", head, target],
+                    ["git", "merge-base", head, "origin/" + target],
                     capture_output=True, text=True, check=True
                 )
                 return result.stdout.strip()
