--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -179,7 +179,7 @@ jobs:
 
             def get_merge_base(head, target):
                 result = subprocess.run(
-                    ["git", "merge-base", head, "origin/" + target],
+                    ["git", "merge-base", head, target],
                     capture_output=True, text=True, check=True
                 )
                 return result.stdout.strip()
@@ -244,10 +244,10 @@ jobs:
                     sys.exit(1)
 
                 # Get the merge base
-                merge_base = get_merge_base(branch_name, targetBranch)
+                merge_base = get_merge_base("HEAD", f"origin/{targetBranch}")
 
                 # Check if there is a merge conflict
-                merge_conflict = get_merge_conflict(merge_base, branch_name, targetBranch)
+                merge_conflict = get_merge_conflict(merge_base, "HEAD", f"origin/{targetBranch}")
 
                 if merge_conflict != "":
                     print(f"Upmerge to {targetBranch} would cause a conflict.")
