--- a/.github/workflows/upmerge-test.yml
+++ b/.github/workflows/upmerge-test.yml
@@ -1,4 +1,4 @@
-name: Upmerge Test
+name: upmerge-test 
 
 on:
   pull_request:
@@ -18,7 +18,6 @@ jobs:
           PULL_URL: ${{ github.event.pull_request.html_url }}
           COMMENTS_URL: ${{ github.event.pull_request.comments_url }}
           BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
-          PROJECT_CONFIG: ${{ vars.PROJECT_CONFIG}}
         run: |
           echo "Pull Request Number: $PULL_REQUEST_NUMBER"
           echo "Pull Request Title: $PULL_REQUEST_TITLE"
@@ -26,7 +25,6 @@ jobs:
           echo "Pull Request URL: $PULL_URL"
           echo "Comments URL: $COMMENTS_URL"
           echo "Branch Name: $BRANCH_NAME"
-          echo "Project Config: $PROJECT_CONFIG"
       - uses: "actions/setup-python@v5"
         with:
           python-version: "3.8"
@@ -48,7 +46,6 @@ jobs:
           PULL_REQUEST_TITLE : ${{ github.event.pull_request.title }}
           PULL_REQUEST_AUTHOR_NAME : ${{ github.event.pull_request.user.login }}
           PULL_URL: ${{ github.event.pull_request.html_url }}
-          PROJECT_CONFIG: ${{ vars.PROJECT_CONFIG}}
           COMMENTS_URL: ${{ github.event.pull_request.comments_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
@@ -163,10 +160,9 @@ jobs:
 
                 return versions
 
-            def get_merge_conflict(base, head, target):
+            def get_merge_conflict(head, target):
                 cmd = [
-                    "git", "merge-tree", "--name-only",
-                    base, head, target
+                    "git", "merge-tree", "--name-only", head, target
                 ]
                 result = subprocess.run(cmd, capture_output=True, text=True)
                 output = result.stdout
@@ -176,13 +172,6 @@ jobs:
                     return result.stdout
                 else:
                     return ""
-
-            def get_merge_base(head, target):
-                result = subprocess.run(
-                    ["git", "merge-base", head, target],
-                    capture_output=True, text=True, check=True
-                )
-                return result.stdout.strip()
 
             def getTargetInBranchVersion(targetBranch):
                 # Use git show to get the version from the top-level pom.xml
@@ -227,33 +216,100 @@ jobs:
             upmergeBranches = generateUpMergeBranchList(projectConfig, branch_name)
             upmergeBranches.append("master")
 
+            test_results = {
+                "pr_number": pr,
+                "pr_title": title,
+                "pr_author": user,
+                "pr_url": pull_url,
+                "base_branch": branch_name,
+                "test_timestamp": time.strftime("%Y-%m-%d %H:%M:%S UTC", time.gmtime()),
+                "branches_tested": [],
+                "conflicts": [],
+                "successful_merges": [],
+                "summary": ""
+            }
+
+            conflicts = []
+            successful_merges = []
+
             # Loop over upmerge versions and check if an upmerge would cause a conflict
             for targetBranch in upmergeBranches:
                 print(f"Testing upmerge to {targetBranch}")
+                
+                branch_result = {
+                    "branch": targetBranch,
+                    "version": None,
+                    "status": "unknown",
+                    "conflict_details": None
+                }
 
-                # Change pom versions
-                inBranchVersion = getTargetInBranchVersion(targetBranch)
-                cmd = [
-                    "mvn", "versions:set",
-                    f"-DnewVersion={inBranchVersion}",
-                    "-DgenerateBackupPoms=false"
-                ]
-                result = subprocess.run(cmd, capture_output=True, text=True)
-                if result.returncode != 0:
-                    print(f"Error changing pom version to {inBranchVersion} for {targetBranch}: {result.stderr}")
+                try:
+                    # Change pom versions
+                    inBranchVersion = getTargetInBranchVersion(targetBranch)
+                    branch_result["version"] = inBranchVersion
+                    
+                    cmd = [
+                        "mvn", "versions:set",
+                        f"-DnewVersion={inBranchVersion}",
+                        "-DgenerateBackupPoms=false"
+                    ]
+                    mvn_result = subprocess.run(cmd, capture_output=True, text=True)
+                    if mvn_result.returncode != 0:
+                        error_msg = f"Maven version update failed: {mvn_result.stderr}"
+                        print(f"Error changing pom version to {inBranchVersion} for {targetBranch}: {mvn_result.stderr}")
+                        sys.exit(1)
+
+                    # Check if there is a merge conflict
+                    merge_conflict = get_merge_conflict("HEAD", f"origin/{targetBranch}")
+
+                    if merge_conflict != "":
+                        print(f"Upmerge to {targetBranch} would cause a conflict.")
+                        branch_result["status"] = "conflict"
+                        branch_result["conflict_details"] = merge_conflict
+                        conflicts.append(targetBranch)
+                    else:
+                        print(f"Upmerge to {targetBranch} should succeed.")
+                        branch_result["status"] = "success"
+                        successful_merges.append(targetBranch)
+                        
+                except Exception as e:
+                    error_msg = f"Error during test: {str(e)}"
+                    print(f"Error testing {targetBranch}: {error_msg}")
                     sys.exit(1)
 
-                # Get the merge base
-                merge_base = get_merge_base("HEAD", f"origin/{targetBranch}")
+                test_results["branches_tested"].append(branch_result)
 
-                # Check if there is a merge conflict
-                merge_conflict = get_merge_conflict(merge_base, "HEAD", f"origin/{targetBranch}")
+            test_results["conflicts"] = conflicts
+            test_results["successful_merges"] = successful_merges
+            
+            if conflicts:
+                test_results["summary"] = f"Conflicts detected in {len(conflicts)} branches: {', '.join(conflicts)}"
 
-                if merge_conflict != "":
-                    print(f"Upmerge to {targetBranch} would cause a conflict.")
-                    result = f"Upmerge to {targetBranch} would cause a conflict. Please resolve the conflicts before merging."
-                    sys.exit(1)
-            else:
-                result = "No conflicts detected for upmerge."
+            with open('upmerge-test-results.json', 'w') as f:
+                json.dump(test_results, f, indent=2)
+            
+            with open('upmerge-test-summary.txt', 'w') as f:
+                f.write(f"Upmerge Test Results for PR #{pr}\n")
+                f.write(f"Title: {title}\n")
+                f.write(f"Author: {user}\n")
+                f.write(f"Base Branch: {branch_name}\n")
+                f.write(f"Test Time: {test_results['test_timestamp']}\n\n")
+                f.write(f"SUMMARY: {test_results['summary']}\n\n")
+                
+                f.write("DETAILED RESULTS:\n")
+                for branch_result in test_results["branches_tested"]:
+                    f.write(f"\n- Branch: {branch_result['branch']}\n")
+                    f.write(f"  Version: {branch_result['version']}\n")
+                    f.write(f"  Status: {branch_result['status']}\n")
+                    if branch_result.get('conflict_details'):
+                        f.write(f"  Conflict Details:\n{branch_result['conflict_details']}\n")
+            print(test_results["summary"])
 
-            print(result)
+      - name: "Upload Upmerge Test Results"
+        uses: actions/upload-artifact@v4
+        with:
+          name: upmerge-test-results-pr-${{ github.event.pull_request.number }}
+          path: |
+            upmerge-test-results.json
+            upmerge-test-summary.txt
+          retention-days: 30
